--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0"
+  },
+  "engines": {
+    "node": ">14.0.0"
   }
+
 }
